# huh

./: .gitignore  CMakeLists.txt  deps.sh
ext/luajit/: .gitrepo  Makefile
ext/luajit/src/: msvcbuild.bat
local/huh/lua/: al5ffi.lua  blendish.lua  bndffi.lua  huh.lua  hui.lua  ouiffi.lua
src/: CMakeLists.txt
src/huh/: CMakeLists.txt  huh.c  huh.h  main.c  vg.c  vg.h
src/huh/blendish/: blendish.h  oui.h
test/moonscript/: run.sh  test.lua  test.moon
